added interface for getting users
