# pkg/swagger/server/restapi/operations/get_users.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// GetUsersHandlerFunc turns a function with the right signature into a get users handler
+type GetUsersHandlerFunc func(GetUsersParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetUsersHandlerFunc) Handle(params GetUsersParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetUsersHandler interface for that can handle valid get users params
+type GetUsersHandler interface {
+	Handle(GetUsersParams) middleware.Responder
+}
+
+// NewGetUsers creates a new http.Handler for the get users operation
+func NewGetUsers(ctx *middleware.Context, handler GetUsersHandler) *GetUsers {
+	return &GetUsers{Context: ctx, Handler: handler}
+}
+
+/*
+	GetUsers swagger:route GET /users getUsers
+
+get metadata of all users
+*/
+type GetUsers struct {
+	Context *middleware.Context
+	Handler GetUsersHandler
+}
+
+func (o *GetUsers) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetUsersParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
